--- a/core/templates/core/catalogo.html
+++ b/core/templates/core/catalogo.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'main.css' %}">
-    <link rel="shortcut icon" href="{% static 'assets/logo.png' %}" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'logo.png' %}" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <title> Catalogo de Pizzas</title>
@@ -48,8 +48,7 @@
         <!-- CARD 1 -->
         {% for pizza in pizzas %}
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="{% static 'assets/catalogo/1Americana.jpg' %}" alt="Card image cap">
-
+                <img class="card-img-top" src="{% static 'pizza3.jpg' %}" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">{{ pizza.nome }}</h5>
                 </div>
@@ -57,6 +56,39 @@
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
                         <a href="#" class="card-link"> <strong>P</strong> R$24,99 </a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="#" class="card-link"> <strong>G</strong> R$75,90,99 </a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="#" class="card-link"> <strong>{{ pizza.tipo }}</strong> {{ pizza.preco }} </a>
+                    </li>
+
+                </ul>
+
+                <div class="card-body">
+                    <!-- <a href="#" class="card-link">Add ao Carrinho</a> -->
+
+                </div>
+            </div>
+        {% endfor %}
+
+    <!-- pizza tradicionais -->
+    <div class="container-fluid">
+        <!-- CARD 1 -->
+        {% for pizza in pizzas %}
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="{% static 'pizza3.jpg/.jpg' %}" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">{{ pizza.nome }}</h5>
+                </div>
+
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        <a href="#" class="card-link"> <strong>P</strong> R$24,99 </a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="#" class="card-link"> <strong>G</strong> R$75,90,99 </a>
                     </li>
                     <li class="list-group-item">
                         <a href="#" class="card-link"> <strong>{{ pizza.tipo }}</strong> {{ pizza.preco }} </a>
@@ -75,7 +107,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
-<script src="{% static 'script.js' %}"></script>
+<script src="{% static 'js/script.js' %}"></script>
 </body>
 
 </html>
+
